@startuml
/' @author @akhilvuputuri'/
/' Got inspiration and adapted
from https://github.com/AY1920S2-CS2103T-W12-1/main/blob/master/docs/images/DeliveredClassDiagram.png '/

skinparam backgroundColor #ffffff
skinparam classAttributeIconSize 0
hide circle


class EditCommandParser implements Parser {
    /' Methods '/
    + parse(args : String) : EditCommand
}

interface Parser<T extends Command> {
    parse(userInput : String) : EditCommand
}

abstract class Command<E> {
    {abstract} execute(model : E) : CommandResult
}

class EditCommand extends Command {
    /' Fields '/
    - COMMAND_WORD : String = "edit"
    - MESSAGE_USAGE : String
    - MESSAGE_SUCCESS : String
    - MESSAGE_DUPLICATE_FOOD : String
    - MESSAGE_NOT_EDITED : String
    - editFoodDescriptor : EditFoodDescriptor
    - index : Index

    /' Methods '/
    + execute(dietModel : DietModel) : CommandResult

}

interface DietModel <<Interface>> {
    - PREDICATE_SHOW_ALL_FOODS : Predicate<Food>

    + hasFood(food : Food) : boolean
    + setFood(food : Food, editedFood : Food) : void
    + getFilteredFoodList() : ObservableList<Food>
    + updateFilteredFoodList(predicate : Predicate<Food>) : void
}

class Index {
    + getZeroBased()
    + getOneBased()
}

class ParserUtil {
    <u> + parseIndex(oneBasedIndex : String) : Index
    <u> + parseCalories(calories : String) : Calories
    <u> + parseName(name : String) : Name
    <u> + parseTag(tag : String) : Tag
    <u> + parseTags(tags : Collection<Tag>) : Set<Tag>
}

class DietModelManager implements DietModel {
    /' Fields '/
    - FoodBook : foodBook

    /' Methods '/
    + addFood(food : Food) : void
    + isReceiptDone() : boolean
}

class FoodBook {
    /' Fields '/
    - UniqueFoodList : foods

    /' Methods '/
    + hasFood(Food food) : boolean
    + setFood(target : Food, editedFood : Food) : void
}


EditCommandParser ..> EditCommand
EditCommandParser ..> ParserUtil
EditCommand ..> DietModel
EditCommandParser ..> Index
EditCommand *--> "1" Index
DietModelManager *-right->"1" FoodBook

@enduml
